Fixed tweet alignment

--- a/webfiles/style.css
+++ b/webfiles/style.css
@@ -126,7 +126,7 @@ h3 {
     float: right;
     margin-right: 20%;
     margin-left: auto;
-    margin-top: -7.95%;
+    margin-top: -8.75%;
     background-color: gray;
     height: 150px;
     width: 450px;
